# pulsar-example

./: Dockerfile  consumer.py  docker-compose.yaml  producer.py  pyproject.toml  requirements.txt
.vim/: coc-settings.json
