[tool.poetry]
name = "pulsar_poc"
version = "0.1.0"
description = "POC pulsar"
authors = ["Jônatas Oliveira <contato@jonatasoliveira.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pep8 = "^1.7.1"

[tool.poetry.dev-dependencies]
jedi = "^0.17.2"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
